--- a/scripts/01-download_data.qmd
+++ b/scripts/01-download_data.qmd
@@ -11,10 +11,11 @@
 #install.packages()
 library(tidyverse)
 library(readr)
+library(jsonlite)
 ```
 
 ``` {r}
-#### Download data ####
+#### Download measurements csv data ####
 raw_pockets_data <-
   read_csv(
     "https://raw.githubusercontent.com/the-pudding/data/725dc18a59a055891dee25e85652f416b0065bdd/pockets/measurements.csv",
@@ -26,11 +27,30 @@ raw_pockets_data <-
 
 
 ```{r}
-#### Save data ####
+#### Save measurements csv data ####
 write_csv(
   x = raw_pockets_data,
   file = here::here("data/raw_data/raw_pockets_data.csv")
 )
 ```
 
+``` {r}
+#### Download measurements json data ####
+# Code referenced from:chat.openai.com 
+github_url <- "https://raw.githubusercontent.com/the-pudding/data/master/pockets/measurementRectangles.json"
 
+# Read the JSON data from GitHub into R
+json_data <- fromJSON(github_url)
+```
+
+```{r}
+#### Save measurements json data ####
+# Code referenced from: chat.openai.com
+json_string <- toJSON(json_data, pretty = TRUE)
+
+# Specify the file path
+file_path <- here::here("data/raw_data/raw_data.json")
+
+# Write the JSON data to the file
+writeLines(json_string, file_path)
+```
