--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -51,15 +51,17 @@ men_jeans_data = read_csv(
 
 # Introduction
 
-Throughout history, women have faced numerous restrictions and limitations, often ingrained within societal norms and cultural practices. Among these limitations, the realm of fashion has served as both a reflection and an enforcer of gender-based inequalities. From ancient times to the modern era, clothing has been a means of expressing social status, cultural identity, and gender roles. However, while men's garments historically incorporated functional pockets, allowing them to carry essentials such as money, keys, and tools, women's clothing has often lacked this practical feature. Instead, women's garments have frequently been designed with form-fitting silhouettes, delicate fabrics, and ornamental details, prioritizing aesthetics over utility.
+Throughout history, women have faced numerous restrictions and limitations, often ingrained within societal norms and cultural practices. Among these limitations, the realm of fashion has served as both a reflection and an enforcer of gender-based inequalities. From ancient times to the modern era, clothing has been a means of expressing social status, cultural identity, and gender roles. According to design expert, Hannah Carlson, pocket inequality stems from the way clothes are designed and made, she explains that "From a very early age, I think we sort of agree as a culture that womenswear, girlswear is meant to be pretty," she said. "And menswear, boyswear is meant to be utilitarian" [@carlson]. Men's garments historically incorporated functional pockets, allowing them to carry essentials such as money, keys, and tools, women's clothing has often lacked this practical feature. Instead, women's garments have frequently been designed with form-fitting silhouettes, delicate fabrics, and ornamental details, prioritizing aesthetics over utility.However, the 1880s, women began to be vocal about pocket inequality, as the "demand for the vote and the demand for pockets were made together" [@carlson].
 
-[ADD RESEARCH AND HISTORICAL CONTEXT]
 
-In 2018, Jan Diehm & Amber Thomas published Womens´s Pockets are Inferior on The Pudding, a data-centric digital publication. In this paper, they "measured pockets in both men´s and women’s pants in 20 of the US’ most popular blue jeans brands" [CITE]. And  "programmatically determined whether various everyday items could fit in an otherwise empty pocket in jeans that aren’t being worn" [CITE]. Jan Diehm & Amber Thomas concluded that women´s pockets were less functional than men´s. 
+In 2018, Jan Diehm & Amber Thomas published Womens´s Pockets are Inferior on *The Pudding*, a data-centric digital publication. In this paper, they "measured pockets in both men´s and women’s pants in 20 of the US’ most popular blue jeans brands" [@pudding]. They "programmatically determined whether various everyday items could fit in an otherwise empty pocket in jeans that aren’t being worn" [@pudding] and concluded that women´s pockets were less functional than men´s. 
 
-Using the data from the previously described article, this paper will graphically reproduce the results and examine whether there is a correlation between the prices of men's jeans and women's jeans. This will help better understand if gender inequality is only reflected in the jean´s pockets or in pricing as well. The findings revealed that (SPECULATION) [women´s jeans do not only have the smaller and less functional pockets, but also tend to be more expensive] 
+
+Using the data from the previously described article, this paper will graphically reproduce the results and examine whether there is a correlation between the prices of men's jeans and women's jeans. The study seeks to determine if women's jeans not only have smaller and less functional pockets but also tend to be more expensive. This will help better understand if gender inequality is only reflected in the jean's pockets or in pricing as well. The findings revealed that pocket area alone may not be a strong predictor of jeans prices for either gender, and there may be other factors influencing the pricing of jeans. A linear regression analysis revealed divergent findings regarding the relationship between pocket area and price in men's and women's jeans. For men's jeans, no significant correlation was found between pocket area and price, indicating that changes in pocket size do not significantly affect the price of men's jeans. In contrast, although a negative correlation was observed in women's jeans, it was not statistically significant, suggesting that while larger pocket areas might be associated with slightly lower prices, other factors likely play a more influential role in determining the price of women's jeans.
 
 This paper is structured into the following sections: Data, which explains the collection and cleaning process; Results, presenting trends and correlations found in the data; Discussion, comparing and evaluating the data; and Conclusion, summarizing the findings.
+
+
 
 
 # Data 
