--- a/paper/references.bib
+++ b/paper/references.bib
@@ -30,3 +30,17 @@
   }
   
 
+@Manual{pudding,
+  title = {Womens´s Pockets are Inferior},
+  author = {Jan Diehm,Amber Thomas},
+  year = {2018},
+  note = {https://pudding.cool/2018/08/pockets/},
+}
+
+
+@Manual{carlson,
+  title = {Women's apparel doesn't have enough pockets. This expert says that has to change},
+  author = {Keena Alwahaidi},
+  year = {2018},
+  note = {https://www.cbc.ca/radio/thecurrent/womens-apparel-doesn-t-have-enough-pockets-1.7071091},
+}
