--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -5,7 +5,7 @@ author: Hari Lee Robledo
 thanks: "Code and data are available at: https://github.com/hari-lr/pockets-and-gender"
 date: today
 date-format: long
-abstract: "Fashion has long reflected and reinforced gender inequalities, with women's clothing often lacking functional pockets found in men's garments. A 2018 study by Jan Diehm & Amber Thomas on The Pudding revealed this discrepancy, highlighting inferior pocket functionality in women's jeans. This paper aims to reproduce these findings and explore if gender disparities extend to pricing. Using the same data, we analyze the correlation between prices of men's and women's jeans. Results suggest that women's jeans not only have smaller pockets but also tend to be more expensive. This study sheds light on gender inequalities in everyday products and their broader implications. [UPDATE according to findings]"
+abstract: "Fashion has long reflected and reinforced gender inequalities, with women's clothing often lacking functional pockets found in men's garments. A 2018 study by Jan Diehm & Amber Thomas on The Pudding revealed this discrepancy, highlighting inferior pocket functionality in women's jeans. This paper aims to reproduce these findings and explore if gender disparities extend to pricing. Using the same data, we analyze the correlation between prices of men's and women's jeans. Results suggest that women's jeans not only have smaller pockets but also tend to be more expensive. This study sheds light on gender inequalities in everyday products and their broader implications. [UPDATE according to findingsThe findings revealed that pocket area alone may not be a strong predictor of jeans prices for either gender, and there may be other factors influencing the pricing of jeans.]"
 format: pdf
 number-sections: true
 toc: true
@@ -51,81 +51,84 @@ men_jeans_data = read_csv(
 
 # Introduction
 
-Throughout history, women have faced numerous restrictions and limitations, often ingrained within societal norms and cultural practices. Among these limitations, the realm of fashion has served as both a reflection and an enforcer of gender-based inequalities. From ancient times to the modern era, clothing has been a means of expressing social status, cultural identity, and gender roles. According to design expert, Hannah Carlson, pocket inequality stems from the way clothes are designed and made, she explains that "From a very early age, I think we sort of agree as a culture that womenswear, girlswear is meant to be pretty," she said. "And menswear, boyswear is meant to be utilitarian" [@carlson]. Men's garments historically incorporated functional pockets, allowing them to carry essentials such as money, keys, and tools, women's clothing has often lacked this practical feature. Instead, women's garments have frequently been designed with form-fitting silhouettes, delicate fabrics, and ornamental details, prioritizing aesthetics over utility.However, the 1880s, women began to be vocal about pocket inequality, as the "demand for the vote and the demand for pockets were made together" [@carlson].
+Throughout history, women have faced numerous restrictions and limitations, often ingrained within societal norms and cultural practices. Among these limitations, the realm of fashion has served as both a reflection and an enforcer of gender-based inequalities. From ancient times to the modern era, clothing has been a means of expressing social status, cultural identity, and gender roles. According to design expert, Hannah Carlson, pocket inequality stems from the way clothes are designed and made, she explains that: "From a very early age, I think we sort of agree as a culture that womenswear, girlswear is meant to be pretty," she said. "And menswear, boyswear is meant to be utilitarian" [@carlson]. Men's garments historically incorporated functional pockets, allowing them to carry essentials such as money, keys, and tools, women's clothing has often lacked this practical feature. Instead, women's garments have frequently been designed with form-fitting silhouettes, delicate fabrics, and ornamental details, prioritizing aesthetics over utility.However, the 1880s, women began to be vocal about pocket inequality, as the "demand for the vote and the demand for pockets were made together" [@carlson].
 
 
-In 2018, Jan Diehm & Amber Thomas published Womens´s Pockets are Inferior on *The Pudding*, a data-centric digital publication. In this paper, they "measured pockets in both men´s and women’s pants in 20 of the US’ most popular blue jeans brands" [@pudding]. They "programmatically determined whether various everyday items could fit in an otherwise empty pocket in jeans that aren’t being worn" [@pudding] and concluded that women´s pockets were less functional than men´s. 
+In 2018, Jan Diehm & Amber Thomas published Womens´s Pockets are Inferior on *The Pudding*, a data-centric digital publication. In this paper, they "measured pockets in both men´s and women’s pants in 20 of the US’ most popular blue jeans brands" [@pudding]. They "programmatically determined whether various everyday items could fit in an otherwise empty pocket in jeans that aren’t being worn" [@pudding]., and concluded that women´s pockets were less functional than men´s. 
 
 
-Using the data from the previously described article, this paper will graphically reproduce the results and examine whether there is a correlation between the prices of men's jeans and women's jeans. The study seeks to determine if women's jeans not only have smaller and less functional pockets but also tend to be more expensive. This will help better understand if gender inequality is only reflected in the jean's pockets or in pricing as well. The findings revealed that pocket area alone may not be a strong predictor of jeans prices for either gender, and there may be other factors influencing the pricing of jeans. A linear regression analysis revealed divergent findings regarding the relationship between pocket area and price in men's and women's jeans. For men's jeans, no significant correlation was found between pocket area and price, indicating that changes in pocket size do not significantly affect the price of men's jeans. In contrast, although a negative correlation was observed in women's jeans, it was not statistically significant, suggesting that while larger pocket areas might be associated with slightly lower prices, other factors likely play a more influential role in determining the price of women's jeans.
+Using the data from the previously described article, this paper will graphically reproduce the results and examine whether there is a correlation between the prices of men's jeans and women's jeans. The study seeks to determine if women's jeans not only have smaller and less functional pockets but also tend to be more expensive. This will help better understand if gender inequality is only reflected in the jean's pockets or in pricing as well. A linear regression analysis revealed divergent findings regarding the relationship between pocket area and price in men's and women's jeans. For men's jeans, no significant correlation was found between pocket area and price, indicating that changes in pocket size do not significantly affect the price of men's jeans. In contrast, although a negative correlation was observed in women's jeans, it was not statistically significant, suggesting that while larger pocket areas might be associated with slightly lower prices, other factors likely play a more influential role in determining the price of women's jeans. 
 
 This paper is structured into the following sections: Data, which explains the collection and cleaning process; Results, presenting trends and correlations found in the data; Discussion, comparing and evaluating the data; and Conclusion, summarizing the findings.
 
 
 
-
 # Data 
-The data utilized in this paper was retrieved from The Pudding GitHub Site Portal, specifically the data collected by by Jan Diehm and Amber Thomas  [CITE]. Data was collected, cleaned, and analyzed using the open-source statistical programming software R [@citeR]. This process involved various packages within R, including tidyverse [@tidyverse], `ggplot2` [@ggplot2], `dplyr` [@dplyr], `readxl` [@readxl], `tibble` [@tibble], `janitor` [@janitor], `KableExtra` [@kableExtra], `knitr` [@knitr], `ggbeeswarm` [@ggbeeswarm], and `ggrepel` [@ggrepel]. A comprehensive description of the data gathering and cleaning process is provided in the following subsections. [MAKE SURE ALL LIBRARIES ARE CITED]
+The data utilized in this paper was retrieved from The Pudding GitHub Site Portal, specifically the data collected by Jan Diehm and Amber Thomas  [@pudding]. Data was collected, cleaned, and analyzed using the open-source statistical programming software R [@citeR]. This process involved various packages within R, including `tidyverse` [@tidyverse], `jsonlite` [@jsonlite], `readr` [@readr], `janitor` [@janitor], `dplyr` [@dplyr], `tibble` [@tibble], `ggplot2` [@ggplot2], `knitr` [@knitr], and `kableExtra` [@kableExtra]. A comprehensive description of the data gathering and cleaning process is provided in the following subsections. 
+
+
+## Dataset 
+
+In the original study, researchers examined jean pocket sizes across 20 brands, encompassing both men's and women's jeans, including skinny and straight styles. The assessment involved scrutinizing four pairs of jeans per brand, all tailored with a 32-inch waistband, despite falling below the median waist size for women in the US. Measurements were meticulously taken in physical stores located in Nashville, New York, and Seattle, with pocket dimensions recorded while jeans were unbuttoned and unzipped, from the inside [@pudding]. 
+The study incorporated computer-generated images to illustrate pocket curvature. Various objects, such as standard pen sizes and a front pocket wallet, were utilized to evaluate pocket compatibility. Additionally, area measurements were computed using the `d3.polygonArea()` function in d3.v4, offering valuable insights into the spatial characteristics of the jean pockets. These methods were intended to give a complete understanding of jean pocket sizes and how well they can hold everyday items. [@pudding].
+
+In this paper, the dataset used for analysis was obtained from `measurementRectangles.json`. This dataset mirrors the measurements found in `measurements.csv`, including brand, style, gender specification (men or women), product name, brand size, waist size, fabric composition, price, and height and width measurements of jean pockets  (see @tbl-raw_data). Notably, the dataset contains a "pocketArea" column representing the area of the polygon generated from a pocket's measurements. However, it's important to note that the units of measurement for this area are not explicitly specified in the provided metadata. To determine the units, one must examine how the measurements were collected and processed. Since the measurements were processed using computer-generated calculations and intended for web display, it is possible that the pocket area is denoted in square centimeters (px²). However, without explicit confirmation from the data documentation or creators of the dataset, absolute certainty regarding the units of measurement remains elusive.
 
 ```{r}
 #| warning: false
 #| message: false
 #| echo: false
 #| label: tbl-raw_data
-#| tbl-cap: "Sample of Raw Pocket Area, Price and Gender Data"
+#| tbl-cap: "Sample of Raw Jean Pockets Data"
 
-head(pocket_area_data, 5)
+# Code referenced from: https://chat.openai.com/
+# Select the first five variables from your dataset
+data_subset <- select(pocket_area_data, 1:6)
 
+# Print the table using kable
+head (data_subset, 5) |>
+   kable( 
+      format = "markdown",
+      col.names = c("Brand", "Style", "Men/Women", "Name", "Fabric","Price"),
+      align = c("l", rep("c", 4))
+)
 ```
 
 
-## JSON Dataset and cleaning
+## Data Cleaning
+
+Initially, the code read the JSON data containing pocket area measurements, standardized the column names using the `clean_names()` function, and stored the cleaned data in the `cleaned_area_data` dataframe. Subsequently, the data was filtered based on gender, separating jeans intended for women and men using the `filter()` function. Only the "price" and "pocket_area" columns were retained for further analysis in the resulting dataframes `men_jeans_data` and `women_jeans_data` (see @tbl-menwomen_table), respectively. In the final step, the cleaned data was saved into CSV files. The `write.csv()` function was utilized to export the data, with separate CSV files generated for women's and men's jeans. 
+
 ```{r}
 #| warning: false
 #| message: false
 #| echo: false
-#| label: tbl-cleaned_area_data
-#| tbl-cap: "Sample of Cleaned Pocket Area, Price and Gender Data"
+#| label: tbl-menwomen_table
+#| layout-ncol: 2
+#| tbl-cap: "Sample of Cleaned Men's and Women´s Data"
 
-# Code referenced from: https://github.com/InessaDeAngelis/Toronto_Elections/blob/main/outputs/paper/toronto_elections_paper.qmd
-
-head (cleaned_area_data, 5) |>
+# Code referenced from: https://chat.openai.com/
+# Create tables
+head(men_jeans_data, 5) |>
   kable(
-    col.names = c("brand","men_women","price","pocket_area"),
-  booktabs = TRUE
+    format = "markdown",
+    caption = "Men's Data",
+    col.names = c("Price", "Pocket Area"),
+    booktabs = TRUE
+  )
+
+head(women_jeans_data, 5) |>
+  kable(
+    format = "markdown",
+    caption = "Women's Data",
+    col.names = c("Price", "Pocket Area"),
+    booktabs = TRUE
   )
 ```
 
-
-# Model
-Given the similarity in lightness observed in foundation shades across both countries, it was of interest to investigate if any differences in saturation existed. This investigation was motivated by the fact that the local population in each country has unique undertones. Before conducting the analysis, several tests were conducted to verify that the model assumptions (See Appendix A), including linearity, normality, and homoscedasticity of residuals, were satisfied, thereby ensuring that the model was well-suited for the data at hand.
-
-The null hypothesis: there is no significant linear relationship between the lightness of foundation shades and the saturation of undertones.
-
-The alternative hypothesis: there is a significant linear relationship between the lightness of foundation shades and the saturation of undertones.
+To visually explore the relationship between pocket area and price for both men's (see @fig-price_per_pocket_men) and women's jeans (see @fig-price_per_pocket_women), scatter plots with regression lines were created. 
 
 
-A linear regression analysis can be conducted to test this hypothesis and to determine whether a statistically significant relationship exists between the variables. A low p-value for the regression coefficient for saturation would provide evidence against the null hypothesis, indicating that changes in saturation do result in a meaningful variation in lightness across foundation shades. On the other hand, if the p-value is high, this would suggest that there is not enough evidence to reject the null hypothesis, and there may be no significant linear relationship between the variables. Ultimately, the results of the analysis will inform whether the null hypothesis can be rejected or not. The mathematical equation for the linear regression model can be written as:
-
-$$L = \beta_0 + \beta_1S + \epsilon$$
-
-Where:
-
-- $L$ represents the dependent variable, which is the overall lightness of the foundation shade
-- $S$ represents the independent variable, which is the saturation of the foundation shade
-- $\beta_0$ represents the intercept of the regression line, which is the predicted value of $L$ when $S$ is equal to zero
-- $\beta_1$ represents the slope of the regression line, which is the change in $L$ for a one-unit increase in $S$
-- $\epsilon$ represents the random error term, which accounts for variability in $L$ that is not explained by the relationship with $S$
-
-The aim of linear regression is to estimate the values of $\beta_0$ and $\beta_1$ that minimize the sum of squared errors between the predicted and actual values of lightness ($L$) for the given values of saturation ($S$) in the dataset. By minimizing this sum of squared errors, the linear regression model can produce the best-fit line to describe the linear relationship between the two variables, allowing for the estimation of $L$ values based on known $S$ values.
-
-In this project, the lightness variable ($L$) is measured on a scale of 0 to 100, while the saturation variable ($S$) is measured on a scale of 0 to 1. Therefore, the slope coefficient $\beta_1$ in the linear regression model would represent the change in lightness ($L$) for a one-unit increase in saturation ($S$), where a one-unit increase in $S$ corresponds to an increase of 1/100 in the saturation of the foundation shade. The intercept $\beta_0$ in the model would represent the expected value of $L$ when $S$ is equal to zero, which in this case would correspond to the lightness value for a completely desaturated foundation shade.
-
-
-\newpage
-
-
-# Results
 ```{r}
 #| warning: false
 #| message: false
@@ -139,7 +142,7 @@ men_jeans_plot <- ggplot(men_jeans_data, aes(x = pocket_area, y = price)) +
   geom_smooth(method = lm, se = FALSE) +
   labs(
     title = "Pocket Area and Price for Men's Jeans",
-    x = "Pocket Area (square pixels)",
+    x = "Pocket Area",
     y = "Price"
   ) +
   theme_classic()
@@ -147,12 +150,8 @@ men_jeans_plot <- ggplot(men_jeans_data, aes(x = pocket_area, y = price)) +
 # Print the plot
 men_jeans_plot
 
-# Fit a linear regression model
-model <- lm(price ~ pocket_area, data = men_jeans_data)
-
-# View the summary of the model
-summary(model)
-
+# Standard deviation of price for men's jeans
+men_price_sd <- sd(men_jeans_data$price)
 
 ```
 
@@ -165,11 +164,11 @@ summary(model)
 
 # Create plot for men_jeans_data
 women_jeans_plot <- ggplot(women_jeans_data, aes(x = pocket_area, y = price)) +
-  geom_point(color = "blue") +
+  geom_point(color = "red") +
   geom_smooth(method = lm, se = FALSE) +
   labs(
     title = "Pocket Area and Price for Women's Jeans",
-    x = "Pocket Area (square pixels)",
+    x = "Pocket Area",
     y = "Price"
   ) +
   theme_classic()
@@ -177,16 +176,72 @@ women_jeans_plot <- ggplot(women_jeans_data, aes(x = pocket_area, y = price)) +
 # Print the plot
 women_jeans_plot
 
-# Fit a linear regression model
-model <- lm(price ~ pocket_area, data = women_jeans_data)
+# Standard deviation of price for women's jeans
+women_price_sd <- sd(women_jeans_data$price)
+```
+
+These plots visually depict the relationship between pocket area and price for men's and women's jeans. Additionally, to compute the standard deviation of price for both men's and women's jeans, the `sd()` function can be applied to the respective columns in the `men_jeans_data` and `women_jeans_data` dataframes. The standard deviation of price for women's jeans is 48.79, while for men's jeans, it is 40.49, indicating the variability in prices within each gender category. This measure helps assess the spread of prices around the mean and provides insight into the degree of dispersion in price values among the observed jeans.
+
+# Model
+To gain further insights and make predictions about [], we will be implementing a linear regression model.
+
+The final model is displayed here.
+
+$$L = \beta_0 + \beta_1S + \epsilon$$
+
+Where:
+
+- $L$ represents the dependent variable, which is the overall price of jeans
+- $S$ represents the independent variable, which is the pocket area
+- $\beta_0$ represents the intercept of the regression line, which is the predicted value of $L$ when $S$ is equal to zero
+- $\beta_1$ represents the slope of the regression line, which is the change in $L$ for a one-unit increase in $S$
+- $\epsilon$ represents the random error term, which accounts for variability in $L$ that is not explained by the relationship with $S$
+
+Linear regression seeks to determine the optimal parameters $\beta_0$ and $\beta_1$ that minimize the discrepancies between predicted and observed prices across varying pocket areas in the dataset. Through this minimization process, the model constructs a line that most accurately represents the association between pocket area and price. Consequently, we can predict price values based on known pocket area measurements. This regression analysis sheds light on how pocket area influences the pricing of jeans for both men and women, offering valuable insights into the pricing dynamics within each gender category.
+
+
+# Results
+
+
+```{r}
+#| warning: false
+#| message: false
+#| echo: false
+#| label: tbl-men_model_summary
+#| tbl-cap: "Summary of Linear Regression Model for Men's Jeans"
+# Fit a linear regression model for men's jeans
+men_model <- lm(price ~ pocket_area, data = men_jeans_data)
 
 # View the summary of the model
-summary(model)
+summary_men <- summary(men_model)
+summary_table_men <- summary_men$coefficients
 
+# Print the summary table
+kable(summary_table_men, caption = "Summary of Linear Regression Model for Men's Jeans", align = "c")
 
 ```
 
+```{r}
+#| warning: false
+#| message: false
+#| echo: false
+#| label: tbl-women_model_summary
+#| tbl-cap: "Summary of Linear Regression Model for Women's Jeans"
+# Fit a linear regression model for women's jeans
+women_model <- lm(price ~ pocket_area, data = women_jeans_data)
 
+# View the summary of the model
+summary_women <- summary(women_model)
+summary_table_women <- summary_women$coefficients
+
+# Print the summary table
+kable(summary_table_women, caption = "Summary of Linear Regression Model for Women's Jeans", align = "c")
+```
+
+
+A scatterplot was generated to compare pocket area and price for both men's and women's jeans. Each gender category was represented by a distinct color in the plot. Additionally, linear regression lines were overlaid for each gender group to observe potential differences in the relationship between pocket area and price.
+
+This visualization facilitated the comparison of how pocket area related to price for men's and women's jeans separately. By including separate regression lines for each gender, we could assess the direction and strength of the relationship between these variables within each group. The use of different colors for men and women aided in distinguishing between the two groups, enabling easy interpretation of the plot.
 ```{r}
 #| echo: false
 #| message: false
@@ -208,14 +263,18 @@ cleaned_area_data |>
     y = "Price",
     color = "Gender"
   ) +
-  scale_color_manual(values = c("blue", "red")) +  # Set custom colors
-  theme_classic()
+  scale_color_manual(values = c("blue", "red")) + theme_classic()
 ```
 
+After visualizing the linear regression for both men's and women's jeans, I proceeded to analyze the results obtained from the regression models:
 
+The linear regression models for both men's and women's jeans revealed interesting insights into the relationship between pocket area and price.
 
+For men's jeans, the coefficient estimate for pocket area ($\beta_1$) is -0.002286, indicating a very small and statistically insignificant negative association between pocket area and price. This suggests that, on average, changes in pocket area do not have a significant impact on the price of men's jeans. The p-value associated with the pocket area coefficient is 0.6445, which is much greater than the typical significance level of 0.05. Additionally, the \( R^2 \) value, which measures the proportion of variance in the dependent variable explained by the independent variable, is very low at 0.005662. Overall, these results suggest that there is little evidence to suggest a meaningful relationship between pocket area and price for men's jeans.
 
+In contrast, for women's jeans, the coefficient estimate for pocket area is -0.009345, also indicating a small negative association with price, although it is slightly larger in magnitude compared to men's jeans. However, like men's jeans, this coefficient is statistically insignificant with a p-value of 0.1804. The \( R^2 \) value for women's jeans is slightly higher at 0.04671, indicating that pocket area explains a slightly larger proportion of the variance in price compared to men's jeans. Despite this, the overall relationship between pocket area and price remains weak for women's jeans.
 
+In summary, the results suggest that pocket area is not a significant predictor of price for either men's or women's jeans in the dataset analyzed. Other factors not considered in this analysis are likely to have a greater influence on the pricing of jeans for both genders.
 
 # Discussion
 
