--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,5 @@
+Bibliography
+
 @Manual{citeR,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
@@ -6,7 +8,6 @@
     year = {2023},
     url = {https://www.R-project.org/},
   }
-  
   
 @Article{tidyverse,
     title = {Welcome to the {tidyverse}},
@@ -19,7 +20,75 @@
     doi = {10.21105/joss.01686},
   }  
   
+@Article{jsonlite,
+  title = {The jsonlite Package: A Practical and Consistent Mapping Between JSON Data and R Objects},
+  author = {Jeroen Ooms},
+  journal = {arXiv:1403.2805 [stat.CO]},
+  year = {2014},
+    url = {https://arxiv.org/abs/1403.2805},
+}
   
+@Manual{readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+  year = {2024},
+  note = {R package version 2.1.5, https://github.com/tidyverse/readr},
+  url = {https://readr.tidyverse.org},
+}
+
+@Manual{janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2021},
+  note = {R package version 2.1.0},
+  url = {https://github.com/sfirke/janitor},
+}
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+  year = {2023},
+  note = {https://dplyr.tidyverse.org, https://github.com/tidyverse/dplyr},
+}
+
+@Manual{tibble,
+    title = {tibble: Simple Data Frames},
+    author = {Kirill Müller and Hadley Wickham},
+    year = {2023},
+    note = {R package version 3.2.1, https://github.com/tidyverse/tibble},
+    url = {https://tibble.tidyverse.org/},
+  }
+  
+@Book{ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+
+ @Manual{knitr,
+    title = {knitr: A General-Purpose Package for Dynamic Report
+      Generation in R},
+    author = {Yihui Xie},
+    year = {2024},
+    note = {R package version 1.46},
+    url = {https://yihui.org/knitr/},
+  }
+  
+@Manual{kableExtra,
+  title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2021},
+  note = {http://haozhu233.github.io/kableExtra/,
+https://github.com/haozhu233/kableExtra},
+}
+
+
+
+
+
 
 @Misc{rstanarm,
     title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
