--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -73,6 +73,7 @@ In the original study, researchers examined jean pocket sizes across 20 brands, 
 The study incorporated computer-generated images to illustrate pocket curvature. Various objects, such as standard pen sizes and a front pocket wallet, were utilized to evaluate pocket compatibility. Additionally, area measurements were computed using the `d3.polygonArea()` function in d3.v4, offering valuable insights into the spatial characteristics of the jean pockets. These methods were intended to give a complete understanding of jean pocket sizes and how well they can hold everyday items. [@pudding].
 
 In this paper, the dataset used for analysis was obtained from `measurementRectangles.json`. This dataset mirrors the measurements found in `measurements.csv`, including brand, style, gender specification (men or women), product name, brand size, waist size, fabric composition, price, and height and width measurements of jean pockets  (see @tbl-raw_data). Notably, the dataset contains a "pocketArea" column representing the area of the polygon generated from a pocket's measurements. However, it's important to note that the units of measurement for this area are not explicitly specified in the provided metadata. To determine the units, one must examine how the measurements were collected and processed. Since the measurements were processed using computer-generated calculations and intended for web display, it is possible that the pocket area is denoted in square centimeters (px²). However, without explicit confirmation from the data documentation or creators of the dataset, absolute certainty regarding the units of measurement remains elusive.
+\newpage
 
 ```{r}
 #| warning: false
@@ -99,6 +100,8 @@ head (data_subset, 5) |>
 
 Initially, the code read the JSON data containing pocket area measurements, standardized the column names using the `clean_names()` function, and stored the cleaned data in the `cleaned_area_data` dataframe. Subsequently, the data was filtered based on gender, separating jeans intended for women and men using the `filter()` function. Only the "price" and "pocket_area" columns were retained for further analysis in the resulting dataframes `men_jeans_data` and `women_jeans_data` (see @tbl-menwomen_table), respectively. In the final step, the cleaned data was saved into CSV files. The `write.csv()` function was utilized to export the data, with separate CSV files generated for women's and men's jeans. 
 
+
+\newpage
 ```{r}
 #| warning: false
 #| message: false
@@ -125,23 +128,24 @@ head(women_jeans_data, 5) |>
     booktabs = TRUE
   )
 ```
+\newpage
 
-To visually explore the relationship between pocket area and price for both men's (see @fig-price_per_pocket_men) and women's jeans (see @fig-price_per_pocket_women), scatter plots with regression lines were created. 
-
+To visually explore the relationship between pocket area and price for both men's and women's jeans scatter plots with regression lines were created (see Figure 1 and 2). 
 
 ```{r}
 #| warning: false
 #| message: false
 #| echo: false
-#| label: fig-price_per_pocket_men
-#| fig-cap: "Jean Price vs Pocket Size (Men)"
+#| label: fig-price_pocket
+#| layout-ncol: 2
+#| fig-cap: "Jean Price vs Pocket Size"
 
 # Create plot for men_jeans_data
 men_jeans_plot <- ggplot(men_jeans_data, aes(x = pocket_area, y = price)) +
   geom_point(color = "blue") +
   geom_smooth(method = lm, se = FALSE) +
   labs(
-    title = "Pocket Area and Price for Men's Jeans",
+    title = "Pocket Size and Price for Men's Jeans",
     x = "Pocket Area",
     y = "Price"
   ) +
@@ -153,21 +157,12 @@ men_jeans_plot
 # Standard deviation of price for men's jeans
 men_price_sd <- sd(men_jeans_data$price)
 
-```
-
-```{r}
-#| warning: false
-#| message: false
-#| echo: false
-#| label: fig-price_per_pocket_women
-#| fig-cap: "Jean Price vs Pocket Size (Women)"
-
 # Create plot for men_jeans_data
 women_jeans_plot <- ggplot(women_jeans_data, aes(x = pocket_area, y = price)) +
   geom_point(color = "red") +
   geom_smooth(method = lm, se = FALSE) +
   labs(
-    title = "Pocket Area and Price for Women's Jeans",
+    title = "Pocket Size and Price for Women's Jeans",
     x = "Pocket Area",
     y = "Price"
   ) +
@@ -178,12 +173,15 @@ women_jeans_plot
 
 # Standard deviation of price for women's jeans
 women_price_sd <- sd(women_jeans_data$price)
+
 ```
 
 These plots visually depict the relationship between pocket area and price for men's and women's jeans. Additionally, to compute the standard deviation of price for both men's and women's jeans, the `sd()` function can be applied to the respective columns in the `men_jeans_data` and `women_jeans_data` dataframes. The standard deviation of price for women's jeans is 48.79, while for men's jeans, it is 40.49, indicating the variability in prices within each gender category. This measure helps assess the spread of prices around the mean and provides insight into the degree of dispersion in price values among the observed jeans.
 
+\newpage
+
 # Model
-To gain further insights and make predictions about [], we will be implementing a linear regression model.
+To gain further insights and make predictions about jeans pricing,  a linear regression model was implemented.
 
 The final model is displayed here.
 
@@ -197,57 +195,20 @@ Where:
 - $\beta_1$ represents the slope of the regression line, which is the change in $L$ for a one-unit increase in $S$
 - $\epsilon$ represents the random error term, which accounts for variability in $L$ that is not explained by the relationship with $S$
 
-Linear regression seeks to determine the optimal parameters $\beta_0$ and $\beta_1$ that minimize the discrepancies between predicted and observed prices across varying pocket areas in the dataset. Through this minimization process, the model constructs a line that most accurately represents the association between pocket area and price. Consequently, we can predict price values based on known pocket area measurements. This regression analysis sheds light on how pocket area influences the pricing of jeans for both men and women, offering valuable insights into the pricing dynamics within each gender category.
+The linear regression seeked to determine the optimal parameters $\beta_0$ and $\beta_1$ that minimize the discrepancies between predicted and observed prices across varying pocket areas in the dataset. Through this minimization process, the model constructs a line that most accurately represents the association between pocket area and price. Consequently, we can predict price values based on known pocket area measurements. This regression analysis sheds light on how pocket area influences the pricing of jeans for both men and women, offering valuable insights into the pricing dynamics within each gender category.
 
-
+\newpage
 # Results
-
-
-```{r}
-#| warning: false
-#| message: false
-#| echo: false
-#| label: tbl-men_model_summary
-#| tbl-cap: "Summary of Linear Regression Model for Men's Jeans"
-# Fit a linear regression model for men's jeans
-men_model <- lm(price ~ pocket_area, data = men_jeans_data)
-
-# View the summary of the model
-summary_men <- summary(men_model)
-summary_table_men <- summary_men$coefficients
-
-# Print the summary table
-kable(summary_table_men, caption = "Summary of Linear Regression Model for Men's Jeans", align = "c")
-
-```
-
-```{r}
-#| warning: false
-#| message: false
-#| echo: false
-#| label: tbl-women_model_summary
-#| tbl-cap: "Summary of Linear Regression Model for Women's Jeans"
-# Fit a linear regression model for women's jeans
-women_model <- lm(price ~ pocket_area, data = women_jeans_data)
-
-# View the summary of the model
-summary_women <- summary(women_model)
-summary_table_women <- summary_women$coefficients
-
-# Print the summary table
-kable(summary_table_women, caption = "Summary of Linear Regression Model for Women's Jeans", align = "c")
-```
-
-
-A scatterplot was generated to compare pocket area and price for both men's and women's jeans. Each gender category was represented by a distinct color in the plot. Additionally, linear regression lines were overlaid for each gender group to observe potential differences in the relationship between pocket area and price.
+A merged scatterplot was generated to compare pocket area and price for both men's and women's jeans. Each gender category was represented by a distinct color in the plot. Additionally, linear regression lines were overlaid for each gender group to observe potential differences in the relationship between pocket area and price (see @fig-price_per_pocket_gender).
 
 This visualization facilitated the comparison of how pocket area related to price for men's and women's jeans separately. By including separate regression lines for each gender, we could assess the direction and strength of the relationship between these variables within each group. The use of different colors for men and women aided in distinguishing between the two groups, enabling easy interpretation of the plot.
+
 ```{r}
 #| echo: false
 #| message: false
 #| warning: false
 #| label: fig-price_per_pocket_gender
-#| fig-cap: "Jean Price vs. Pocket Area Size per Gender"
+#| fig-cap: "Jean Price vs. Pocket Size per Gender"
 
 ## Comparing between average building scores vs.average total income per ward
 
@@ -258,25 +219,60 @@ cleaned_area_data |>
   geom_point() + 
   geom_smooth(method=lm, se=FALSE) + 
   labs(
-    title = "Pocket Area and Price by Gender",
-    x = "Pocket Area (square pixels)",
+    title = "Pocket Size and Price by Gender",
+    x = "Pocket Area",
     y = "Price",
     color = "Gender"
   ) +
   scale_color_manual(values = c("blue", "red")) + theme_classic()
 ```
 
-After visualizing the linear regression for both men's and women's jeans, I proceeded to analyze the results obtained from the regression models:
+After visualizing the linear regression for both men's and women's jeans, the results obtained from the regression models were analyzed. 
 
-The linear regression models for both men's and women's jeans revealed interesting insights into the relationship between pocket area and price.
+For men's jeans, the coefficient estimate for pocket area ($\beta_1$) is -0.002286, indicating a very small and statistically insignificant negative association between pocket area and price. This suggests that, on average, changes in pocket area do not have a significant impact on the price of men's jeans. The p-value associated with the pocket area coefficient is 0.6445, which is much greater than the typical significance level of 0.05. Additionally, the \( R^2 \) value, which measures the proportion of variance in the dependent variable explained by the independent variable, is very low at 0.005662. Overall, these results suggest that there is little evidence to suggest a meaningful relationship between pocket area and price for men's jeans (see @tbl-men_lm).
 
-For men's jeans, the coefficient estimate for pocket area ($\beta_1$) is -0.002286, indicating a very small and statistically insignificant negative association between pocket area and price. This suggests that, on average, changes in pocket area do not have a significant impact on the price of men's jeans. The p-value associated with the pocket area coefficient is 0.6445, which is much greater than the typical significance level of 0.05. Additionally, the \( R^2 \) value, which measures the proportion of variance in the dependent variable explained by the independent variable, is very low at 0.005662. Overall, these results suggest that there is little evidence to suggest a meaningful relationship between pocket area and price for men's jeans.
-
-In contrast, for women's jeans, the coefficient estimate for pocket area is -0.009345, also indicating a small negative association with price, although it is slightly larger in magnitude compared to men's jeans. However, like men's jeans, this coefficient is statistically insignificant with a p-value of 0.1804. The \( R^2 \) value for women's jeans is slightly higher at 0.04671, indicating that pocket area explains a slightly larger proportion of the variance in price compared to men's jeans. Despite this, the overall relationship between pocket area and price remains weak for women's jeans.
+In contrast, for women's jeans, the coefficient estimate for pocket area is -0.009345, also indicating a small negative association with price, although it is slightly larger in magnitude compared to men's jeans. However, like men's jeans, this coefficient is statistically insignificant with a p-value of 0.1804. The \( R^2 \) value for women's jeans is slightly higher at 0.04671, indicating that pocket area explains a slightly larger proportion of the variance in price compared to men's jeans. Despite this, the overall relationship between pocket area and price remains weak for women's jeans (see @tbl-women_lm).
 
 In summary, the results suggest that pocket area is not a significant predictor of price for either men's or women's jeans in the dataset analyzed. Other factors not considered in this analysis are likely to have a greater influence on the pricing of jeans for both genders.
 
+```{r}
+#| warning: false
+#| message: false
+#| echo: false
+#| label: tbl-men_lm
+#| tbl-cap: "Summary of Linear Regression Model for Men's Jeans"
+
+# Fit a linear regression model for men's jeans
+men_model <- lm(price ~ pocket_area, data = men_jeans_data)
+
+# View the summary of the model
+summary_men <- summary(men_model)
+summary_table_men <- summary_men$coefficients
+
+# Print the summary table
+kable(summary_table_men, align = "c")
+
+```
+
+```{r}
+#| warning: false
+#| message: false
+#| echo: false
+#| label: tbl-women_lm
+#| tbl-cap: "Summary of Linear Regression Model for Women's Jeans"
+# Fit a linear regression model for women's jeans
+women_model <- lm(price ~ pocket_area, data = women_jeans_data)
+
+# View the summary of the model
+summary_women <- summary(women_model)
+summary_table_women <- summary_women$coefficients
+
+# Print the summary table
+kable(summary_table_women, align = "c")
+```
+
 # Discussion
+
 
 ## First discussion point {#sec-first-point}
 ## Second discussion point
@@ -284,11 +280,11 @@ In summary, the results suggest that pocket area is not a significant predictor 
 
 ##Weaknesses and next steps
 
-\newpage
 
-\appendix
 
-# Appendix {-}
+
+
+
 
 
 
